--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body{
 }
 #myCanvas
 {
-	margin-top: 30px;
+    margin-top: 30px;
 	border-width:10px;
 	background-color: white; 
 	border-style:ridge;
@@ -19,19 +19,22 @@ h1,h4
 {
 	color: white !important;
 }
-</style>		
+</style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-	<title>Movendo o Rover</title>
+	<title>Movendo o Rover em Marte</title>
 </head>
-<body onload="add();"   >
+<body onload="add();">
+
 <center>
-<h1>Movendo o Rover sobre Marte</h1>
-<canvas id="myCanvas" width="800" height="600">
-</canvas>
+<h1>Movendo o Rover em Marte</h1>
+	<canvas id="myCanvas" width="800" height="600">
+	</canvas>
 <h4>
-	<b class="text-danger">NOTA : </b> SE O ROVER NÃO ESTIVER VISÍVEL, PRESSIONE QUALQUER TECLA
+	<b class="text-danger">NOTE : </b> Pressione qualquer tecla para ver seu Rover
 </h4>
 
 </center>
